<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:paddingLeft="@dimen/_15sdp"
    android:paddingRight="@dimen/_15sdp">

    <TextView
        android:id="@+id/logout_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/_10sdp"
        android:text="@string/logout_msg1"
        android:textColor="@color/black"
        android:textSize="@dimen/_15sdp" />

    <TextView
        android:id="@+id/logout_des"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logout_title"
        android:layout_marginTop="@dimen/_8sdp"
        android:text="@string/logout_msg"
        android:textColor="@color/black"
        android:textSize="@dimen/_15sdp" />

    <TextView
        android:id="@+id/tv_yes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logout_des"
        android:layout_alignParentEnd="true"
        android:paddingLeft="@dimen/_10sdp"
        android:paddingTop="@dimen/_10sdp"
        android:paddingRight="@dimen/_10sdp"
        android:paddingBottom="@dimen/_10sdp"
        android:text="@string/logout_yes"
        android:textColor="@color/black"
        android:textSize="@dimen/_15sdp" />

    <TextView
        android:id="@+id/tv_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logout_des"
        android:layout_toLeftOf="@+id/tv_yes"
        android:paddingLeft="@dimen/_10sdp"
        android:paddingTop="@dimen/_10sdp"
        android:paddingRight="@dimen/_10sdp"
        android:paddingBottom="@dimen/_10sdp"
        android:text="@string/logout_no"
        android:textColor="@color/black"
        android:textSize="@dimen/_15sdp" />

</RelativeLayout>