<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_60sdp"
        android:background="@color/main_app_color">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="@dimen/_44sdp"
            android:layout_height="@dimen/_44sdp"
            android:layout_centerVertical="true"
            android:adjustViewBounds="true"
            android:padding="@dimen/_10sdp"
            android:src="@drawable/ic_back"
            android:tint="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/inquiry_form"
            android:textColor="@color/white"
            android:textSize="@dimen/_17sdp" />

        <ImageView
            android:id="@+id/img_logout"
            android:layout_width="@dimen/_44sdp"
            android:layout_height="@dimen/_44sdp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:adjustViewBounds="true"
            android:padding="@dimen/_11sdp"
            android:src="@drawable/ic_log_out" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:scrollbarThumbVertical="@color/trans">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_5sdp"
            android:orientation="vertical"
            android:paddingBottom="@dimen/_20sdp">

            <TextView
                style="@style/TextTheme"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/info_glass_type" />

            <androidx.cardview.widget.CardView
                style="@style/CardTheme2Spinner">

                <Spinner
                    android:id="@+id/sp_glass_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:background="@drawable/bg_spinner"
                    android:paddingTop="@dimen/_8sdp"
                    android:paddingBottom="@dimen/_8sdp" />

            </androidx.cardview.widget.CardView>

            <TextView
                style="@style/TextTheme"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/info_standard" />

            <RadioGroup
                android:id="@+id/radioGroup"
                style="@style/MarginTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/_15sdp">

                <RadioButton
                    android:id="@+id/radioInch"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/main_app_color"
                    android:checked="true"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/info_inch"
                    android:textColor="@color/black"
                    android:textSize="20dp" />

                <RadioButton
                    android:id="@+id/radioMm"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:buttonTint="@color/main_app_color"
                    android:checked="false"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/info_mm"
                    android:textColor="@color/black"
                    android:textSize="20dp" />
            </RadioGroup>


            <TextView
                android:id="@+id/tv_thickness"
                style="@style/TextTheme"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/info_thickness" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_thickness"
                style="@style/CardTheme">

                <EditText
                    android:id="@+id/et_thickness"
                    style="@style/EditTextTheme"
                    android:fontFamily="@font/roboto_regular"
                    android:inputType="number"
                    android:singleLine="true" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_material_details"
                style="@style/TextTheme"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/info_material_det" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_material_details"
                style="@style/CardTheme">

                <EditText
                    android:id="@+id/et_material_detail"
                    style="@style/EditTextTheme"
                    android:fontFamily="@font/roboto_regular" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_glass_1"
                style="@style/TextTheme"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/info_glass_1"
                android:visibility="gone" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_glass_1"
                style="@style/CardTheme"
                android:visibility="gone">

                <EditText
                    android:id="@+id/et_glass_1"
                    style="@style/EditTextTheme"
                    android:fontFamily="@font/roboto_regular" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_glass_2"
                style="@style/TextTheme"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/info_glass_2"
                android:visibility="gone" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_glass_2"
                style="@style/CardTheme"
                android:visibility="gone">

                <EditText
                    android:id="@+id/et_glass_2"
                    style="@style/EditTextTheme"
                    android:fontFamily="@font/roboto_regular" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_glass_3"
                style="@style/TextTheme"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/info_glass_3"
                android:visibility="gone" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_glass_3"
                style="@style/CardTheme"
                android:visibility="gone">

                <EditText
                    android:id="@+id/et_glass_3"
                    style="@style/EditTextTheme"
                    android:fontFamily="@font/roboto_regular" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_gap"
                style="@style/TextTheme"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/info_gap" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_gap"
                style="@style/CardTheme2Spinner">

                <Spinner
                    android:id="@+id/sp_gap"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:background="@drawable/bg_spinner"
                    android:paddingTop="@dimen/_8sdp"
                    android:paddingBottom="@dimen/_8sdp" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_pvb"
                style="@style/TextTheme"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/info_pvb" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_pvb"
                style="@style/CardTheme2Spinner">

                <Spinner
                    android:id="@+id/sp_pvb"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:background="@drawable/bg_spinner"
                    android:paddingTop="@dimen/_8sdp"
                    android:paddingBottom="@dimen/_8sdp" />
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextTheme"
                        android:fontFamily="@font/roboto_regular"
                        android:text="@string/info_glass_width" />

                    <androidx.cardview.widget.CardView
                        style="@style/CardTheme1"
                        android:layout_marginLeft="@dimen/_25sdp"
                        android:layout_marginRight="@dimen/_25sdp"
                        android:layout_marginBottom="@dimen/_15sdp">

                        <EditText
                            android:id="@+id/et_width"
                            style="@style/EditTextTheme"
                            android:fontFamily="@font/roboto_regular"
                            android:inputType="number"
                            android:singleLine="true" />

                    </androidx.cardview.widget.CardView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextTheme1"
                        android:fontFamily="@font/roboto_regular"
                        android:text="@string/info_glass_height" />

                    <androidx.cardview.widget.CardView
                        style="@style/CardTheme1"
                        android:layout_marginLeft="@dimen/_8sdp"
                        android:layout_marginRight="@dimen/_25sdp"
                        android:layout_marginBottom="@dimen/_15sdp">

                        <EditText
                            android:id="@+id/et_height"
                            style="@style/EditTextTheme"
                            android:fontFamily="@font/roboto_regular"
                            android:inputType="number"
                            android:singleLine="true" />

                    </androidx.cardview.widget.CardView>
                </LinearLayout>
            </LinearLayout>

            <TextView
                style="@style/TextTheme2"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/info_quantity" />

            <androidx.cardview.widget.CardView style="@style/CardTheme">

                <EditText
                    android:id="@+id/et_quantity"
                    style="@style/EditTextTheme"
                    android:fontFamily="@font/roboto_regular"
                    android:inputType="number"
                    android:singleLine="true" />

            </androidx.cardview.widget.CardView>

            <TextView
                style="@style/TextTheme"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/info_photo" />

            <ImageView
                android:id="@+id/iv_upload_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_25sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginRight="@dimen/_25sdp"
                android:src="@drawable/ic_add_item" />

            <ImageView
                android:id="@+id/iv_upload_photo1"
                android:layout_width="@dimen/_70sdp"
                android:layout_height="@dimen/_70sdp"
                android:layout_marginLeft="@dimen/_25sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginRight="@dimen/_25sdp"
                android:src="@drawable/ic_add_item"
                android:visibility="gone" />

            <TextView
                style="@style/TextTheme"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/info_notes" />

            <androidx.cardview.widget.CardView
                style="@style/CardTheme"
                android:layout_marginBottom="@dimen/_20sdp">

                <EditText
                    android:id="@+id/et_note"
                    style="@style/EditTextTheme"
                    android:fontFamily="@font/roboto_regular"
                    android:gravity="start|top"
                    android:lines="2" />

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:id="@+id/btm_lay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_30sdp"
                android:layout_marginRight="@dimen/_30sdp"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_submit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginLeft="@dimen/_15sdp"
                    android:layout_marginRight="@dimen/_15sdp"
                    android:layout_marginBottom="@dimen/_25sdp"
                    android:layout_weight="1"
                    app:cardBackgroundColor="@color/main_app_color"
                    app:cardCornerRadius="@dimen/_5sdp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/roboto_regular"
                        android:paddingLeft="@dimen/_15sdp"
                        android:paddingTop="@dimen/_7sdp"
                        android:paddingRight="@dimen/_15sdp"
                        android:paddingBottom="@dimen/_7sdp"
                        android:text="@string/submit_btn"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_17sdp" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_cancel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginLeft="@dimen/_15sdp"
                    android:layout_marginRight="@dimen/_15sdp"
                    android:layout_marginBottom="@dimen/_25sdp"
                    android:layout_weight="1"
                    app:cardBackgroundColor="@color/black"
                    app:cardCornerRadius="@dimen/_5sdp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/roboto_regular"
                        android:paddingLeft="@dimen/_15sdp"
                        android:paddingTop="@dimen/_7sdp"
                        android:paddingRight="@dimen/_15sdp"
                        android:paddingBottom="@dimen/_7sdp"
                        android:text="@string/cancel_btn"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_17sdp" />
                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>