<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_60sdp"
        android:background="@color/main_app_color">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="@dimen/_44sdp"
            android:layout_height="@dimen/_44sdp"
            android:layout_centerVertical="true"
            android:adjustViewBounds="true"
            android:padding="@dimen/_10sdp"
            android:src="@drawable/ic_back"
            android:tint="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/address_title"
            android:textColor="@color/white"
            android:textSize="@dimen/_17sdp" />

        <ImageView
            android:id="@+id/iv_logout"
            android:layout_width="@dimen/_44sdp"
            android:layout_height="@dimen/_44sdp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:adjustViewBounds="true"
            android:padding="@dimen/_11sdp"
            android:src="@drawable/ic_log_out" />

    </RelativeLayout>

    <ScrollView
        android:id="@+id/form_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:layout_marginBottom="@dimen/_20sdp"
        android:scrollbarThumbVertical="@color/trans">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_20sdp"
            android:orientation="vertical">

            <TextView
                style="@style/TextTheme"
                android:text="@string/street_no" />

            <androidx.cardview.widget.CardView
                style="@style/CardTheme">

                <EditText
                    android:id="@+id/et_street_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/trans"
                    android:padding="@dimen/_8sdp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_17sdp" />

            </androidx.cardview.widget.CardView>

            <TextView
                style="@style/TextTheme"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="@string/address_det" />

            <androidx.cardview.widget.CardView style="@style/CardTheme">

                <EditText
                    android:id="@+id/et_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/trans"
                    android:padding="@dimen/_8sdp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_17sdp" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                style="@style/CardTheme2Spinner"
                android:layout_marginTop="@dimen/_20sdp"
                android:visibility="gone">

                <Spinner
                    android:id="@+id/sp_country"
                    style="@style/SpinnerTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/_18sdp"
                    android:paddingBottom="@dimen/_18sdp" />
            </androidx.cardview.widget.CardView>

            <TextView
                style="@style/TextTheme"
                android:text="@string/state" />

            <androidx.cardview.widget.CardView style="@style/CardTheme">

                <EditText
                    android:id="@+id/et_state"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/trans"
                    android:padding="@dimen/_8sdp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_17sdp" />

            </androidx.cardview.widget.CardView>

            <TextView
                style="@style/TextTheme"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="@string/city" />

            <androidx.cardview.widget.CardView style="@style/CardTheme">

                <EditText
                    android:id="@+id/et_city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/trans"
                    android:padding="@dimen/_8sdp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_17sdp" />

            </androidx.cardview.widget.CardView>

            <TextView
                style="@style/TextTheme"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="@string/pincode" />

            <androidx.cardview.widget.CardView
                style="@style/CardTheme"
                android:layout_marginBottom="@dimen/_30sdp">

                <EditText
                    android:id="@+id/et_pincode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/trans"
                    android:inputType="number"
                    android:padding="@dimen/_8sdp"
                    android:singleLine="true"
                    android:maxLength="6"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_17sdp" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="@dimen/_25sdp"
                android:layout_marginRight="@dimen/_25sdp"
                android:layout_marginBottom="@dimen/_35sdp"
                app:cardBackgroundColor="@color/main_app_color"
                app:cardCornerRadius="@dimen/_5sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="@dimen/_8sdp"
                    android:text="@string/save"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_17sdp" />
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/form_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:indeterminateTint="@color/main_app_color"
        android:layout_below="@+id/toolbar"
        android:visibility="gone" />


</RelativeLayout>