<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/_65sdp"
            android:layout_marginRight="@dimen/_65sdp"
            android:adjustViewBounds="true"
            android:src="@drawable/ic_splash_logo" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_70sdp"
            android:layout_marginRight="@dimen/_25sdp"
            app:cardBackgroundColor="@color/main_app_color"
            app:cardCornerRadius="@dimen/_5sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="@dimen/_8sdp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/login_txt"
                android:textColor="@color/white"
                android:textSize="@dimen/_17sdp" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_15sdp"
            android:text="@string/or_txt"
            android:textAllCaps="true"
            android:fontFamily="@font/roboto_regular"
            android:textColor="@color/black"
            android:textSize="@dimen/_13sdp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginRight="@dimen/_25sdp"
            android:elevation="5dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="@dimen/_5sdp"
            card_view:cardElevation="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="@dimen/_8sdp"
                android:text="@string/create_acc_txt"
                android:fontFamily="@font/roboto_regular"
                android:textColor="@color/main_app_color"
                android:textSize="@dimen/_17sdp" />
        </androidx.cardview.widget.CardView>


    </LinearLayout>

</RelativeLayout>